--- a/payments/resolutions_2.html
+++ b/payments/resolutions_2.html
@@ -222,7 +222,7 @@
                                   aria-labelledby="reason-GUEST_OFFER_EXTRA-row-title"
                                   aria-describedby="reason-GUEST_OFFER_EXTRA-row-subtitle"
                                   id="reason-GUEST_OFFER_EXTRA-row-radio-button"
-                                  class="explore-filter-menu__radio-input"
+                                  class="radio__button-active"
                                   type="radio"
                                   value="GUEST_OFFER_EXTRA"
                                 />
