--- a/reviews/reviews.html
+++ b/reviews/reviews.html
@@ -393,7 +393,7 @@
                                               aria-labelledby="expectations_option_very_high-row-title"
                                               aria-describedby="expectations_option_very_high-row-subtitle"
                                               id="expectations_option_very_high-row-radio-button"
-                                              class="explore-filter-menu__radio-input"
+                                              class="radio__button-active"
                                               type="radio"
                                               value="5"
                                             />
@@ -417,7 +417,7 @@
                                               aria-labelledby="expectations_option_very_high-row-title"
                                               aria-describedby="expectations_option_very_high-row-subtitle"
                                               id="expectations_option_very_high-row-radio-button"
-                                              class="explore-filter-menu__radio-input"
+                                              class="radio__button-active"
                                               type="radio"
                                               value="5"
                                             />
