--- a/submission/cancel.html
+++ b/submission/cancel.html
@@ -1089,7 +1089,7 @@
                                         id="flexible"
                                         data-testid="policy__flexible"
                                         name="lyt-radio-cancellation-policy"
-                                        class="explore-filter-menu__radio-input"
+                                        class="radio__button-active"
                                         type="radio"
                                         value="CANCEL_FLEXIBLE"
                                         checked=""
