--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -1301,7 +1301,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                             aria-labelledby="info_where_are_you_broadcasting-Indoors or on my personal property-row-title"
                                             aria-describedby="info_where_are_you_broadcasting-Indoors or on my personal property-row-subtitle"
                                             id="info_where_are_you_broadcasting-Indoors or on my personal property-row-radio-button"
-                                            class="explore-filter-menu__radio-input"
+                                            class="radio__button-active"
                                             aria-invalid="false"
                                             type="radio"
                                             data-veloute="info_where_are_you_broadcasting-0"
