--- a/account/signup_login.html
+++ b/account/signup_login.html
@@ -2105,7 +2105,7 @@
                                         <div class="flex-items-center">
                                           <div class="become-a-host__count-action-wrapper"><input aria-labelledby="sms-row-title"
                                               aria-describedby="sms-row-subtitle" id="sms-row-radio-button"
-                                              class="explore-filter-menu__radio-input" type="radio" value="TEXT" checked=""></div>
+                                              class="radio__button-active" type="radio" value="TEXT" checked=""></div>
                                         </div>
                                       </div>
                                     </label></div>
@@ -5491,7 +5491,7 @@
                                         <div class="flex-items-center">
                                           <div class="become-a-host__count-action-wrapper"><input aria-labelledby="sms-row-title"
                                               aria-describedby="sms-row-subtitle" id="sms-row-radio-button"
-                                              class="explore-filter-menu__radio-input" type="radio" value="TEXT" checked=""></div>
+                                              class="radio__button-active" type="radio" value="TEXT" checked=""></div>
                                         </div>
                                       </div>
                                     </label></div>
