--- a/payments/resolutions.html
+++ b/payments/resolutions.html
@@ -165,7 +165,7 @@
                                 aria-labelledby="intent-send-money-row-title"
                                 aria-describedby="intent-send-money-row-subtitle"
                                 id="intent-send-money-row-radio-button"
-                                class="explore-filter-menu__radio-input"
+                                class="radio__button-active"
                                 type="radio"
                                 value="SEND_MONEY"
                                 checked=""
