fix help text in trips

--- a/listings-product/trips.html
+++ b/listings-product/trips.html
@@ -1341,9 +1341,7 @@
                                           --tl-font-weight: 400;
                                           --tl-line-height: 18px;
                                         "
-                                      >
-                                        Can’t find your reservation&nbsp;here?
-                                      </span>
+                                      >Can’t find your reservation&nbsp;here?</span>
                                     </span>
                                     <span
                                       data-testid="help-action"
@@ -1353,9 +1351,7 @@
                                         aria-label="Visit the Help&nbsp;Center"
                                         href="/help?audience=guest"
                                         class="text-link"
-                                      >
-                                        Visit the Help&nbsp;Center
-                                      </a>
+                                      >Visit the Help&nbsp;Center</a>
                                     </span>
                                   </div>
                                 </div>
