add back to top button

--- a/help/searching-for-stays.html
+++ b/help/searching-for-stays.html
@@ -6,6 +6,7 @@
     <title>Searching for stays - Airbnb Help Center</title>
     <link rel="stylesheet" href="../assets/css/global.css" />
     <link rel="stylesheet" href="../assets/css/pages.css" />
+    <link rel="stylesheet" href="../dist/gbertl.css" />
   
   </head>
   <body>
@@ -1763,5 +1764,47 @@
         </div>
       </div>
     </div>
+
+    <!-- back to top -->
+    <div dir="ltr" class="hidden" id='back-to-top'>
+      <div
+        class="l7g6a6g afpx55k dir dir-ltr"
+        data-testid="back-to-top-link-button-container"
+      >
+        <a
+          href="#article-section-navigation"
+          class="btn-dark"
+          ><span class="_14d5b3i"
+            ><span class="_1r769ej"
+              ><svg
+                viewBox="0 0 32 32"
+                xmlns="http://www.w3.org/2000/svg"
+                aria-hidden="true"
+                role="presentation"
+                focusable="false"
+                style="
+                  display: block;
+                  fill: none;
+                  height: 12px;
+                  width: 12px;
+                  stroke: currentcolor;
+                  stroke-width: 5.33333;
+                  overflow: visible;
+                "
+              >
+                <g fill="none">
+                  <path d="m16 4v26"></path>
+                  <path
+                    d="m4 15 11.2928932-11.29289322c.3905243-.39052429 1.0236893-.39052429 1.4142136 0l11.2928932 11.29289322"
+                  ></path>
+                </g></svg></span
+            ><span class="_3hmsj">Back to top</span></span
+          ></a
+        >
+      </div>
+    </div>
+
+    <script src="../assets/js/pages/help/searching-for-stays.js"></script>
+
   </body>
 </html>
