landing page no. 2 B - fx

--- a/landing-pages/accessibility.html
+++ b/landing-pages/accessibility.html
@@ -251,6 +251,15 @@
                             </div>
                           </div>
                         </div>
+                        <div class="_14lk9e14 hidden" id="guest_experience.landing_pages.accessibility.faq.item_1.question-row-expandable-items">
+                          <div class="_1rw28r4l">
+                           <span class="f1dlg3jl dir dir-ltr">
+                            It’s easy to use our search filters to only show the listings that have the accessibility features you need. Learn more about
+                            <a target="_blank" href="/help/article/2000/search-for-places-with-accessibility-features" class="_1sikdxcl">searching for stays with accessibility features</a> or
+                            <a target="_blank" href="/help/article/3138/search-for-experiences-with-accessibility-features" class="_1sikdxcl">searching for Experiences with accessibility features</a>.
+                           </span>
+                          </div>
+                        </div>
                       </div>
                     </div>
                     <hr aria-hidden="true" class="d1rxadgf dir dir-ltr">
@@ -274,6 +283,15 @@
                                   </g>
                                 </svg></div>
                             </div>
+                          </div>
+                        </div>
+                        <div class="_14lk9e14 hidden" id="guest_experience.landing_pages.accessibility.faq.item_1.question-row-expandable-items">
+                          <div class="_1rw28r4l">
+                           <span class="f1dlg3jl dir dir-ltr">
+                            It’s easy to use our search filters to only show the listings that have the accessibility features you need. Learn more about
+                            <a target="_blank" href="/help/article/2000/search-for-places-with-accessibility-features" class="_1sikdxcl">searching for stays with accessibility features</a> or
+                            <a target="_blank" href="/help/article/3138/search-for-experiences-with-accessibility-features" class="_1sikdxcl">searching for Experiences with accessibility features</a>.
+                           </span>
                           </div>
                         </div>
                       </div>
@@ -301,6 +319,15 @@
                             </div>
                           </div>
                         </div>
+                        <div class="_14lk9e14 hidden" id="guest_experience.landing_pages.accessibility.faq.item_1.question-row-expandable-items">
+                          <div class="_1rw28r4l">
+                           <span class="f1dlg3jl dir dir-ltr">
+                            It’s easy to use our search filters to only show the listings that have the accessibility features you need. Learn more about
+                            <a target="_blank" href="/help/article/2000/search-for-places-with-accessibility-features" class="_1sikdxcl">searching for stays with accessibility features</a> or
+                            <a target="_blank" href="/help/article/3138/search-for-experiences-with-accessibility-features" class="_1sikdxcl">searching for Experiences with accessibility features</a>.
+                           </span>
+                          </div>
+                        </div>
                       </div>
                     </div>
                     <hr aria-hidden="true" class="d1rxadgf dir dir-ltr">
@@ -324,6 +351,15 @@
                                   </g>
                                 </svg></div>
                             </div>
+                          </div>
+                        </div>
+                        <div class="_14lk9e14 hidden" id="guest_experience.landing_pages.accessibility.faq.item_1.question-row-expandable-items">
+                          <div class="_1rw28r4l">
+                           <span class="f1dlg3jl dir dir-ltr">
+                            It’s easy to use our search filters to only show the listings that have the accessibility features you need. Learn more about
+                            <a target="_blank" href="/help/article/2000/search-for-places-with-accessibility-features" class="_1sikdxcl">searching for stays with accessibility features</a> or
+                            <a target="_blank" href="/help/article/3138/search-for-experiences-with-accessibility-features" class="_1sikdxcl">searching for Experiences with accessibility features</a>.
+                           </span>
                           </div>
                         </div>
                       </div>
@@ -351,6 +387,15 @@
                             </div>
                           </div>
                         </div>
+                        <div class="_14lk9e14 hidden" id="guest_experience.landing_pages.accessibility.faq.item_1.question-row-expandable-items">
+                          <div class="_1rw28r4l">
+                           <span class="f1dlg3jl dir dir-ltr">
+                            It’s easy to use our search filters to only show the listings that have the accessibility features you need. Learn more about
+                            <a target="_blank" href="/help/article/2000/search-for-places-with-accessibility-features" class="_1sikdxcl">searching for stays with accessibility features</a> or
+                            <a target="_blank" href="/help/article/3138/search-for-experiences-with-accessibility-features" class="_1sikdxcl">searching for Experiences with accessibility features</a>.
+                           </span>
+                          </div>
+                        </div>
                       </div>
                     </div>
                     <hr aria-hidden="true" class="d1rxadgf dir dir-ltr">
@@ -374,6 +419,15 @@
                                   </g>
                                 </svg></div>
                             </div>
+                          </div>
+                        </div>
+                        <div class="_14lk9e14 hidden" id="guest_experience.landing_pages.accessibility.faq.item_1.question-row-expandable-items">
+                          <div class="_1rw28r4l">
+                           <span class="f1dlg3jl dir dir-ltr">
+                            It’s easy to use our search filters to only show the listings that have the accessibility features you need. Learn more about
+                            <a target="_blank" href="/help/article/2000/search-for-places-with-accessibility-features" class="_1sikdxcl">searching for stays with accessibility features</a> or
+                            <a target="_blank" href="/help/article/3138/search-for-experiences-with-accessibility-features" class="_1sikdxcl">searching for Experiences with accessibility features</a>.
+                           </span>
                           </div>
                         </div>
                       </div>
@@ -660,6 +714,15 @@
                               </div>
                             </div>
                           </div>
+                          <div class="_14lk9e14 hidden" id="guest_experience.landing_pages.accessibility.faq.item_1.question-row-expandable-items">
+                            <div class="_1rw28r4l">
+                             <span class="f1dlg3jl dir dir-ltr">
+                              It’s easy to use our search filters to only show the listings that have the accessibility features you need. Learn more about
+                              <a target="_blank" href="/help/article/2000/search-for-places-with-accessibility-features" class="_1sikdxcl">searching for stays with accessibility features</a> or
+                              <a target="_blank" href="/help/article/3138/search-for-experiences-with-accessibility-features" class="_1sikdxcl">searching for Experiences with accessibility features</a>.
+                             </span>
+                            </div>
+                          </div>
                         </div>
                       </div>
                       <hr aria-hidden="true" class="d1rxadgf dir dir-ltr">
@@ -684,6 +747,15 @@
                                     </g>
                                   </svg></div>
                               </div>
+                            </div>
+                          </div>
+                          <div class="_14lk9e14 hidden" id="guest_experience.landing_pages.accessibility.faq.item_1.question-row-expandable-items">
+                            <div class="_1rw28r4l">
+                             <span class="f1dlg3jl dir dir-ltr">
+                              It’s easy to use our search filters to only show the listings that have the accessibility features you need. Learn more about
+                              <a target="_blank" href="/help/article/2000/search-for-places-with-accessibility-features" class="_1sikdxcl">searching for stays with accessibility features</a> or
+                              <a target="_blank" href="/help/article/3138/search-for-experiences-with-accessibility-features" class="_1sikdxcl">searching for Experiences with accessibility features</a>.
+                             </span>
                             </div>
                           </div>
                         </div>
@@ -712,6 +784,15 @@
                               </div>
                             </div>
                           </div>
+                          <div class="_14lk9e14 hidden" id="guest_experience.landing_pages.accessibility.faq.item_1.question-row-expandable-items">
+                            <div class="_1rw28r4l">
+                             <span class="f1dlg3jl dir dir-ltr">
+                              It’s easy to use our search filters to only show the listings that have the accessibility features you need. Learn more about
+                              <a target="_blank" href="/help/article/2000/search-for-places-with-accessibility-features" class="_1sikdxcl">searching for stays with accessibility features</a> or
+                              <a target="_blank" href="/help/article/3138/search-for-experiences-with-accessibility-features" class="_1sikdxcl">searching for Experiences with accessibility features</a>.
+                             </span>
+                            </div>
+                          </div>
                         </div>
                       </div>
                       <hr aria-hidden="true" class="d1rxadgf dir dir-ltr">
@@ -735,6 +816,15 @@
                                     </g>
                                   </svg></div>
                               </div>
+                            </div>
+                          </div>
+                          <div class="_14lk9e14 hidden" id="guest_experience.landing_pages.accessibility.faq.item_1.question-row-expandable-items">
+                            <div class="_1rw28r4l">
+                             <span class="f1dlg3jl dir dir-ltr">
+                              It’s easy to use our search filters to only show the listings that have the accessibility features you need. Learn more about
+                              <a target="_blank" href="/help/article/2000/search-for-places-with-accessibility-features" class="_1sikdxcl">searching for stays with accessibility features</a> or
+                              <a target="_blank" href="/help/article/3138/search-for-experiences-with-accessibility-features" class="_1sikdxcl">searching for Experiences with accessibility features</a>.
+                             </span>
                             </div>
                           </div>
                         </div>
@@ -762,6 +852,15 @@
                               </div>
                             </div>
                           </div>
+                          <div class="_14lk9e14 hidden" id="guest_experience.landing_pages.accessibility.faq.item_1.question-row-expandable-items">
+                            <div class="_1rw28r4l">
+                             <span class="f1dlg3jl dir dir-ltr">
+                              It’s easy to use our search filters to only show the listings that have the accessibility features you need. Learn more about
+                              <a target="_blank" href="/help/article/2000/search-for-places-with-accessibility-features" class="_1sikdxcl">searching for stays with accessibility features</a> or
+                              <a target="_blank" href="/help/article/3138/search-for-experiences-with-accessibility-features" class="_1sikdxcl">searching for Experiences with accessibility features</a>.
+                             </span>
+                            </div>
+                          </div>
                         </div>
                       </div>
                       <hr aria-hidden="true" class="d1rxadgf dir dir-ltr">
@@ -785,6 +884,15 @@
                                     </g>
                                   </svg></div>
                               </div>
+                            </div>
+                          </div>
+                          <div class="_14lk9e14 hidden" id="guest_experience.landing_pages.accessibility.faq.item_1.question-row-expandable-items">
+                            <div class="_1rw28r4l">
+                             <span class="f1dlg3jl dir dir-ltr">
+                              It’s easy to use our search filters to only show the listings that have the accessibility features you need. Learn more about
+                              <a target="_blank" href="/help/article/2000/search-for-places-with-accessibility-features" class="_1sikdxcl">searching for stays with accessibility features</a> or
+                              <a target="_blank" href="/help/article/3138/search-for-experiences-with-accessibility-features" class="_1sikdxcl">searching for Experiences with accessibility features</a>.
+                             </span>
                             </div>
                           </div>
                         </div>
