experience hosting page - fx all bugsx

--- a/messaging/inbox.html
+++ b/messaging/inbox.html
@@ -1838,6 +1838,7 @@
                                         <div class="_124iqfn">
                                           <div>
                                             <button
+                                              tooltip-hover
                                               aria-label="Choose a photo from photo gallery or take a photo"
                                               data-testid="compose-bar-button-messaging__open_image_upload_dialog"
                                               type="button"
@@ -1862,12 +1863,26 @@
                                                   ></path>
                                                 </svg>
                                               </span>
+                                              <div
+                                                class="_1mqtq54"
+                                                aria-hidden="true"
+                                                data-popper-direction="ltr"
+                                                role="dialog"
+                                                style="max-width: 300px; position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(-22px, -65px);"
+                                                tabindex="-1"
+                                                data-popper-placement="top"
+                                                >
+                                                <span class="_6n0ip2" data-popper-arrow="true" aria-hidden="true" style="position: absolute; left: 0px; transform: translate(24px, 22px);"></span>
+                                                <div class="_3hmsj" role="presentation">Image</div>
+                                              </div>
                                             </button>
+                                           
                                           </div>
                                         </div>
                                         <div class="_124iqfn">
                                           <div>
                                             <button
+                                              tooltip-hover
                                               aria-label="Show quick replies"
                                               data-testid="compose-bar-button-messaging__open_quick_replies"
                                               type="button"
@@ -1892,6 +1907,18 @@
                                                   ></path>
                                                 </svg>
                                               </span>
+                                              <div
+                                                class="_1mqtq54"
+                                                aria-hidden="true"
+                                                data-popper-direction="ltr"
+                                                role="dialog"
+                                                style="max-width: 300px; position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(-22px, -65px);"
+                                                tabindex="-1"
+                                                data-popper-placement="top"
+                                              >
+                                                <span class="_6n0ip2" data-popper-arrow="true" aria-hidden="true" style="position: absolute; left: 0px; transform: translate(24px, 22px);"></span>
+                                                <div class="_3hmsj" role="presentation">Quick Replies</div>
+                                              </div>
                                             </button>
                                           </div>
                                         </div>
