fx done no.1 A & B

--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -384,8 +384,9 @@
                           type="button"
                           class="header__logo-btn"
                         >
-                          <span>
+                          <span id="side-nav-toggle-span">
                             <svg
+                              id="side-nav-toggle-svg"
                               viewBox="0 0 16 16"
                               role="img"
                               aria-hidden="false"
@@ -399,6 +400,7 @@
                               "
                             >
                               <path
+                                id="side-nav-toggle-path"
                                 d="m15.25 12.5a.75.75 0 01-.75.75h-13a .75.75 0 010-1.5h13a .75.75 0 01 .75.75zm-.75-5.75h-13a .75.75 0 100 1.5h13a .75.75 0 000-1.5zm-13-3.5h13a .75.75 0 000-1.5h-13a .75.75 0 100 1.5z"
                                 fill-rule="evenodd"
                               ></path>
@@ -2481,4 +2483,5 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
       <iframe style="display: none"></iframe>
     </div>
   </body>
+  <script src="../assets/js/pages/manage-listing.js"></script>
 </html>
