--- a/edit/what.html
+++ b/edit/what.html
@@ -380,8 +380,9 @@
                           type="button"
                           class="header__logo-btn"
                         >
-                          <span>
+                          <span id="side-nav-toggle-span">
                             <svg
+                              id="side-nav-toggle-svg"
                               viewBox="0 0 16 16"
                               role="img"
                               aria-hidden="false"
@@ -395,6 +396,7 @@
                               "
                             >
                               <path
+                                id="side-nav-toggle-path"
                                 d="m15.25 12.5a.75.75 0 01-.75.75h-13a .75.75 0 010-1.5h13a .75.75 0 01 .75.75zm-.75-5.75h-13a .75.75 0 100 1.5h13a .75.75 0 000-1.5zm-13-3.5h13a .75.75 0 000-1.5h-13a .75.75 0 100 1.5z"
                                 fill-rule="evenodd"
                               ></path>
@@ -1635,4 +1637,5 @@ Join me in this fun and easy cooking experience where you will learn techniques 
     ></textarea>
     <div dir="ltr"><div class="_56lpy0"></div></div>
   </body>
+  <script src="../assets/js/pages/manage-listing.js"></script>
 </html>
