--- a/submission/GuestP.html
+++ b/submission/GuestP.html
@@ -1008,14 +1008,14 @@
                     <div id="lyt-main-header" class="site-content__page-header">
                       <div class="hidden-xl">
                         <button id="side-nav-toggle" aria-expanded="true" type="button" class="header__logo-btn">
-                          <span>
-                            <svg viewBox="0 0 16 16" role="img" aria-hidden="false" aria-label="Toggle step navigation" focusable="false" style="
+                          <span id="side-nav-toggle-span">
+                            <svg id="side-nav-toggle-svg" viewBox="0 0 16 16" role="img" aria-hidden="false" aria-label="Toggle step navigation" focusable="false" style="
                               height: 14px;
                               width: 14px;
                               display: block;
                               fill: currentcolor;
                               ">
-                              <path d="m15.25 12.5a.75.75 0 01-.75.75h-13a .75.75 0 010-1.5h13a .75.75 0 01 .75.75zm-.75-5.75h-13a .75.75 0 100 1.5h13a .75.75 0 000-1.5zm-13-3.5h13a .75.75 0 000-1.5h-13a .75.75 0 100 1.5z" fill-rule="evenodd"></path>
+                              <path id="side-nav-toggle-path" d="m15.25 12.5a.75.75 0 01-.75.75h-13a .75.75 0 010-1.5h13a .75.75 0 01 .75.75zm-.75-5.75h-13a .75.75 0 100 1.5h13a .75.75 0 000-1.5zm-13-3.5h13a .75.75 0 000-1.5h-13a .75.75 0 100 1.5z" fill-rule="evenodd"></path>
                             </svg>
                           </span>
                         </button>
@@ -2346,4 +2346,5 @@
       <iframe style="display: none"></iframe>
     </div>
   </body>
+  <script src="../assets/js/pages/manage-listing.js"></script>
 </html>
