--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -1343,7 +1343,7 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                             </div>
                                           </label>
                                           <div
-                                            class="guest-container__selector-icon-wrapper"
+                                            class="guest-container__selector-icon-wrapper" style="padding-top: 47px !important;"
                                           >
                                             <svg
                                               viewBox="0 0 32 32"
