--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -1433,9 +1433,15 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                                       type="checkbox"
                                                     />
                                                     <span
-                                                      class="explore-filter-menu__list-checkbox"
+                                                      class="explore-filter-menu__list-checkbox checkbox-option"
                                                       data-checkbox="true"
-                                                    ></span>
+                                                    >
+                                                      <span class="_1oj8hra">
+                                                        <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
+                                                        <path fill="none" d="m4 16.5 8 8 16-16"></path>
+                                                        </svg>
+                                                      </span>
+                                                    </span>
                                                   </span>
                                                 </div>
                                               </div>
@@ -1527,9 +1533,15 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                                       type="checkbox"
                                                     />
                                                     <span
-                                                      class="explore-filter-menu__list-checkbox"
+                                                      class="explore-filter-menu__list-checkbox checkbox-option"
                                                       data-checkbox="true"
-                                                    ></span>
+                                                    >
+                                                      <span class="_1oj8hra">
+                                                        <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
+                                                        <path fill="none" d="m4 16.5 8 8 16-16"></path>
+                                                        </svg>
+                                                      </span>
+                                                    </span>
                                                   </span>
                                                 </div>
                                               </div>
@@ -1582,9 +1594,15 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                                       type="checkbox"
                                                     />
                                                     <span
-                                                      class="explore-filter-menu__list-checkbox"
+                                                      class="explore-filter-menu__list-checkbox checkbox-option"
                                                       data-checkbox="true"
-                                                    ></span>
+                                                    >
+                                                      <span class="_1oj8hra">
+                                                        <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
+                                                        <path fill="none" d="m4 16.5 8 8 16-16"></path>
+                                                        </svg>
+                                                      </span>
+                                                    </span>
                                                   </span>
                                                 </div>
                                               </div>
@@ -1636,9 +1654,15 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                                       type="checkbox"
                                                     />
                                                     <span
-                                                      class="explore-filter-menu__list-checkbox"
+                                                      class="explore-filter-menu__list-checkbox checkbox-option"
                                                       data-checkbox="true"
-                                                    ></span>
+                                                    >
+                                                      <span class="_1oj8hra">
+                                                        <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
+                                                        <path fill="none" d="m4 16.5 8 8 16-16"></path>
+                                                        </svg>
+                                                      </span>
+                                                    </span>
                                                   </span>
                                                 </div>
                                               </div>
@@ -1978,7 +2002,13 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                                     <span
                                                       class="explore-filter-menu__list-checkbox"
                                                       data-checkbox="true"
-                                                    ></span>
+                                                    >
+                                                      <span class="_1oj8hra">
+                                                        <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
+                                                        <path fill="none" d="m4 16.5 8 8 16-16"></path>
+                                                        </svg>
+                                                      </span>
+                                                    </span>
                                                   </span>
                                                 </div>
                                               </div>
